target_os = "android"
# change to x64 for x86_64 targets
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "76.0.3809.111"
android_default_version_code = "380911152"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 1
fieldtrial_testing_like_official_build = true

# enable patented codecs
ffmpeg_branding = "Chrome"
proprietary_codecs = true

is_cfi = true

enable_remoting = false
enable_reporting = false

# use local database for Safe Browsing checks
safe_browsing_mode = 3

# API key for the optional Safe Browsing feature in Vanadium
#
# Do not reuse this key in another project. Obtain your own API key(s) instead:
#
# https://www.chromium.org/developers/how-tos/api-keys
google_api_key = "AIzaSyBosp_XnBdN2W5zuvqs9db46T5525VLJM8"

# sample apk signing setup
android_keystore_path = "//vanadium.keystore"
android_keystore_name = "vanadiumkey"
android_keystore_password = "vanadiumpass"
